--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <link rel="stylesheet" href="css/game.css">
 
 <body>
+<canvas id ="canvas" width="600" height="480"></canvas>
   <script>
-    runGame(GAME_LEVELS, DOMDisplay);
+  	initCanvas();
+  	
+    
   </script>
 </body>
